--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ img {
   width: 20vw;
   height: 4vh;
   font-size: 11px; 
-  text-align: left; 
+  text-align: center; 
 }
 
 .attribution a{
@@ -205,4 +205,74 @@ img {
   color: white;
   font-size: 13px;
   font-family: "Outfit", sans-serif;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 90vw;
+  }
+
+  .nftImage {
+    height: auto;
+    width: 90%;
+    margin-top: 2vh;
+    margin-left: 5%;
+  }
+
+  .nftImage img {
+    width: 100%;
+    height: auto;
+  }
+
+  .iconView {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 255, 247, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    border-radius: 15px;
+  }
+    
+  .iconView img{
+    width: 50px;
+    height: auto;
+  }
+
+  .mainContent {
+    width: 85vw;
+    margin: 0 auto;
+  }
+
+  .iconContainer {
+    width: 85vw;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .ETH, .threeClass {
+    width: 500%;
+    margin-left: 0;
+  }
+
+  .line {
+    width: 85vw;
+  }
+
+  .creatorName {
+    width: 85vw;
+    flex-wrap: wrap;
+  }
+
+  .attribution {
+    width: 85vw;
+    margin: 15px auto;
+    text-align: center;
+  }
 }
